@@ -2,6 +2,6 @@
 <ModSyncNinjaData>
 	<ID>7faaf32c-e343-44ac-a32c-0b12a712e31d</ID>
 	<ModName>[sd] bridges</ModName>
-	<Version>b18-1.1.1</Version>
+	<Version>b18-1.1.2</Version>
 	<SaveBreaking>false</SaveBreaking>
 </ModSyncNinjaData>
